[project]
name = "big-data"
version = "0.0.1"
description = ""
authors = [
    {name = "Илья",email = "bkmz8_133@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "py7zr (>=0.22.0,<0.23.0)",
    "multivolumefile (>=0.2.3,<0.3.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
